# cicd

./: BUILD  WORKSPACE  bigquery_github_trends.par  build_deploy_test.yaml  check_source_file.sh  ci.sh  cloudbuild.yaml  dag_validation_test.py  findfile.sh  load_var.sh  test_dag.sh
bazelgreeting/: BUILD
bigquery_pipeline/: BUILD  bigquery_github_trends.py
bigquery_pipeline/dags/: bigquery_github_trends.py
build-utils/: build-artifact.sh  deploy-artifact.sh  load-composer-var.sh  publish-artifact.sh
env-setup/: set_env.sh  set_env_copy.sh
etls/evaluation/: BUILD
etls/evaluation/game-1/: BUILD.bazel  README.md
etls/evaluation/game-1/game_event/workflow-dag/: subdag.py
etls/evaluation/game-1/load_scripts/: clean_game_end_inserttable.sql  game_event_inserttable.sql
examples/: BUILD  proto_example.py
examples/proto/: BUILD  game_event.proto
par_example/: BUILD  Dockerfile  app.py  par_example_dag.py
par_example/lib1/: libapp.py
pipeline-apachebeam-maven/: BUILD
pipeline-apachebeam-maven/src/main/java/org/apache/beam/examples/: MinimalWordCount.java
pipeline1/: BUILD  cloudbuild.yaml
pipeline1/build-pipeline/: build_deploy_test.yaml
pipeline1/data-processing-code/src/main/java/org/apache/beam/examples/: WordCount.java
pipeline1/source-code/build-pipeline/: build_deploy_test.yaml
pipeline2/: create_composer_var.sh  pyvenv.cfg  var.json
pipeline2/source-code/terraform/: commitments.csv
pipeline5/: BUILD  pom.xml
pipeline5/src/main/java/com/example/: App1.java
pipeline6/: BUILD
pipeline6/src/main/java/com/example/: Greetings.java
