# Copyright 2020 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#package(default_visibility = ["//visibility:public"])
#package(default_visibility = ["BUILD_PACKAGE_VISIBILITY"])

load("@rules_pkg//:pkg.bzl", "pkg_deb", "pkg_tar")

pkg_tar(
    name = "game-event-dag",
    srcs = ["//etls/evaluation/game-1:game_event"],
    extension = "tar.bz2",
)

pkg_deb(
    name = "game-event",
    architecture = "amd64",
    built_using = "unzip (6.0.1)",
    data = ":game-event-dag",
    depends = [
        "zlib1g-dev",
        "unzip",
        ":bash-completion"
    ],
    description = "Game Event End to End ETL",
    maintainer = "dev@riotgames.com",
    package = "game-event",
    version_file = ":version.txt",
#    version = "VERSION",
)


genrule(
    name = 'package_game_event_deb_file',
    srcs = ['//etls/evaluation/game-1:game-event'],
    outs = ['deb'],
    cmd = """

    source /workspace/build-utils/build_env_vars
    cd $${build_bazel_workspace}
    COMMIT="$$(git rev-parse HEAD)"
    BRANCH="$$(git rev-parse --abbrev-ref HEAD)"
    mkdir -p "bazel-bin/etls/evaluation/game-1/deb" && cp bazel-bin/etls/evaluation/game-1/game-event.deb $(@D)/deb && mv bazel-bin/etls/evaluation/game-1/deb/game-event bazel-bin/etls/evaluation/game-1/game-event_$${BRANCH}_$${COMMIT}.deb
    """,
    visibility = ["//visibility:public"],
)

genrule(
   name = "embeded_label",
   outs = ["version.txt"],
   cmd = """
        EXECPATH=$$(pwd)
        source /workspace/build-utils/build_env_vars
        cd $${build_bazel_workspace}
        COMMIT="$$(git rev-parse HEAD)"
        BRANCH="$$(git rev-parse --abbrev-ref HEAD)"
        cd $${EXECPATH}
        VERSIONTXT="./version.txt"
        echo -e $${BRANCH}_$${COMMIT} > VERSIONTXT > $@
        """
)
#> $@
#cd /Users/ext.gampapathini/Documents/git_tutikashilpa/cicd

#genrule(
#    name = "copy_file",
#    srcs = ["//etls/evaluation:game-event"],
#    outs = [ 'deb/game-event'],
#    cmd = """
#    cd /Users/ext.gampapathini/Documents/git_tutikashilpa/cicd
#    mv bazel-bin/etls/evaluation/game-event.deb bazel-bin/etls/evaluation/test.deb && cp bazel-bin/etls/evaluation/game-event.deb $(@D)
#    """,
#    output_to_bindir = 1,
#)